chore: clean up irregular spaces

--- a/docs/customize/typescript/configuring-module-format.mdx
+++ b/docs/customize/typescript/configuring-module-format.mdx
@@ -10,7 +10,7 @@ Modern SDKs need to balance compatibility with performance. The `moduleFormat` o
 
 ## How to Configure Module Format
 
-To configure the module format, update `gen.yaml` (which is often located in the SDK’s `.speakeasy` directory) file under the `typescript` section:
+To configure the module format, update `gen.yaml` (which is often located in the SDK's `.speakeasy` directory) file under the `typescript` section:
 
 ```yaml <sdk-root>/.speakeasy/gen.yaml
 typescript:
