--- a/examples/openapi/path-fragments.mdx
+++ b/examples/openapi/path-fragments.mdx
@@ -14,7 +14,7 @@ featured_image: "/media/examples/generic.png"
 
 # Using Path Fragments to Solve Equivalent Path Signatures
 
-Equivalent path signatures in an OpenAPI specification can cause validation errors and/or unexpected behaviors. Adding unique path fragments is an effective method for resolving these conflicts. Path fragments appended with an anchor (e.g., `#id`, `#name`) make paths unique without altering the API’s functionality since the anchor section is not sent in API requests.
+Equivalent path signatures in an OpenAPI specification can cause validation errors and/or unexpected behaviors. Adding unique path fragments is an effective method for resolving these conflicts. Path fragments appended with an anchor (e.g., `#id`, `#name`) make paths unique without altering the API's functionality since the anchor section is not sent in API requests.
 
 ## When to Use Path Fragments
 Path fragments should be used when the OpenAPI specification contains multiple paths with equivalent signatures but distinct parameter names. For example:
