--- a/openapi/examples.mdx
+++ b/openapi/examples.mdx
@@ -133,7 +133,7 @@ To provide multiple examples for a property, or for the entire object, you can u
 
 As before, the `examples` can be specified within `components.schemas`.
 
-Here’s how you can use the examples keyword at both the property level and the object level.
+Here's how you can use the examples keyword at both the property level and the object level.
 
 **Using examples at the Property Level**
 
