--- a/openapi/frameworks/trpc.mdx
+++ b/openapi/frameworks/trpc.mdx
@@ -207,7 +207,7 @@ Run `npm run generate-openapi` and see how this information is added to the Open
 
 We can improve our OpenAPI document by adding fields to the procedure's input and output schemas, and by adding examples, documentation, and metadata.
 
-### Expanding the Procedure’s Input and Output Schemas
+### Expanding the Procedure's Input and Output Schemas
 
 Let's create a `Drink` model and add a few field types to see how these are represented in the OpenAPI document.
 
