feat: Restructure OpenAPI Hub (#11)

--- a/openapi/content.mdx
+++ b/openapi/content.mdx
@@ -1,4 +1,7 @@
-
+---
+title: Content and Media Types
+asIndexPage: true
+---
 import { Callout, Table } from "@/mdx/components";
 
 # Content and Media Types in OpenAPI
