--- a/openapi/content/file-uploads.mdx
+++ b/openapi/content/file-uploads.mdx
@@ -27,7 +27,7 @@ File uploads can be described in an OpenAPI document using `multipart/form-data`
 
 ### `multipart/form-data`
 
-Widely recognized as the standard for file uploads, `multipart/form-data` allows files and associated metadata to be transmitted in the same request. 
+Widely recognized as the standard for file uploads, `multipart/form-data` allows files and associated metadata to be transmitted in the same request.
 
 In an OpenAPI document, specifying `multipart/form-data` for the `/file/upload` endpoint might look like this:
 
@@ -37,10 +37,10 @@ paths:
     post:
     summary: Upload a file
       description: >
-        Allows uploading a file along with additional metadata. 
+        Allows uploading a file along with additional metadata.
       operationId: uploadFile
       tags:
-        - FileUpload      
+        - FileUpload
       requestBody:
         required: true
         content:
@@ -62,33 +62,32 @@ The client can call the endpoint to upload a PDF file with a metadata descriptio
 
 <CodeWithTabs>
 
-```bash curl !!tabs curl
-curl -X POST "https://api.example.com/file/upload" \
-     -H "Content-Type: multipart/form-data" \
-     -F "file=@content.pdf" \
-     -F "caption=Sample PDF file"
-```
+  ```bash !!tabs curl
+  curl -X POST "https://api.example.com/file/upload" \
+      -H "Content-Type: multipart/form-data" \
+      -F "file=@content.pdf" \
+      -F "caption=Sample PDF file"
+  ```
 
-```python Python !!tabs Python
-import requests
+  ```python !!tabs Python
+  import requests
 
-url = "https://api.example.com/file/upload"
-file_path = "content.pdf"
-caption = "Sample PDF file"
+  url = "https://api.example.com/file/upload"
+  file_path = "content.pdf"
+  caption = "Sample PDF file"
 
-with open(file_path, 'rb') as file:
-    files = {
-        'file': (file_path, file, 'application/pdf'),
-        'caption': (None, caption)
-    }
-    response = requests.post(url, files=files)
+  with open(file_path, 'rb') as file:
+      files = {
+          'file': (file_path, file, 'application/pdf'),
+          'caption': (None, caption)
+      }
+      response = requests.post(url, files=files)
 
-if response.status_code == 200:
-    print("File uploaded successfully")
-else:
-    print(f"Failed to upload file: {response.status_code}"
-```
-
+  if response.status_code == 200:
+      print("File uploaded successfully")
+  else:
+      print(f"Failed to upload file: {response.status_code}"
+  ```
 </CodeWithTabs>
 
 ### `application/octet-stream` (binary)
@@ -118,13 +117,13 @@ The client can call the endpoint to upload an image file as follows:
 
 <CodeWithTabs>
 
-```bash curl !!tabs curl
+```bash !!tabs curl
 curl -X POST "https://api.example.com/file/upload" \
      -H "Content-Type: application/octet-stream" \
      --data-binary "@image.jpg"
 ```
 
-```python Python !!tabs Python
+```python !!tabs Python
 import requests
 
 url = "https://api.example.com/file/upload"
@@ -179,13 +178,13 @@ The client can call the endpoint using curl or Python as follows:
 
 <CodeWithTabs>
 
-```bash curl !!tabs curl
+```bash !!tabs curl
 curl -X POST "https://api.example.com/file/upload" \
      -H "Content-Type: application/json" \
      -d '{"file": $(base64 image.jpg), "caption": "Sample JSON file"}'
 ```
 
-```python Python !!tabs Python
+```python !!tabs Python
 import requests
 import base64
 
@@ -222,7 +221,7 @@ The `multipart/form-data` format is preferred for most file uploads, as it allow
 
 ### Handling large files
 
-Uploading large files can significantly impact the performance of your API. To avoid server overload, consider using a streaming approach instead of sending or processing the whole file at once on the server. The `application/octet-stream` media type is ideal for this use case, as it allows the file to be divided into smaller binary chunks to be sent one by one. 
+Uploading large files can significantly impact the performance of your API. To avoid server overload, consider using a streaming approach instead of sending or processing the whole file at once on the server. The `application/octet-stream` media type is ideal for this use case, as it allows the file to be divided into smaller binary chunks to be sent one by one.
 
 Chunked file uploads require some extra coding work as there is no formal specification for upload streams. However, this process can be implemented using a **session-based streaming** approach, which involves the following steps:
 
@@ -301,9 +300,9 @@ paths:
           description: Invalid or missing session ID
 ```
 
-The client begins by sending a POST `/init` request to the server to initiate an upload session, receiving a `session_id` in the response. 
+The client begins by sending a POST `/init` request to the server to initiate an upload session, receiving a `session_id` in the response.
 
-The file is then divided into smaller binary chunks, and each chunk is sent using a POST `/upload` request with the `X-Session-ID` header set to the `session_id`. The chunk is included in the request body as `application/octet-stream`. 
+The file is then divided into smaller binary chunks, and each chunk is sent using a POST `/upload` request with the `X-Session-ID` header set to the `session_id`. The chunk is included in the request body as `application/octet-stream`.
 
 When all chunks are uploaded, the client sends a POST `/finalize` request including the `X-Session-ID` header to instruct the server to validate and assemble the chunks into the complete file, ensuring a reliable and efficient upload process.
 
