chore: update assets

--- a/examples/hooks/env-auth-hook.mdx
+++ b/examples/hooks/env-auth-hook.mdx
@@ -1,15 +1,15 @@
 ---
 title: "Authentication hook for local environment variables"
 description: "How to use a SDK hook for authenticating with your API using local environment variables."
-image: "/media/examples/generic.png"
+image: "/assets/examples/generic.png"
 date: 2024-04-24
 authors:
   - name: Sagar Batchu
-  - image_url: '/media/author-headshots/sagar.jpeg'
+  - image_url: '/assets/author-headshots/sagar.jpeg'
 tags:
   - Hooks
 is_featured: true
-featured_image: "/media/examples/generic.png"
+featured_image: "/assets/examples/generic.png"
 ---
 
 # Authenticating with local environment variables
