--- a/examples/hooks/user-agent-hook.mdx
+++ b/examples/hooks/user-agent-hook.mdx
@@ -1,15 +1,15 @@
 ---
 title: "Setting user agents in browser environments"
 description: "How to use SDK hooks to set user agents in a browser-compatible way"
-image: "/media/examples/generic.png"
+image: "/assets/examples/generic.png"
 date: 2024-02-11
 authors:
   - name: Sagar
-  - image_url: '/media/author-headshots/sagar.jpeg'
+  - image_url: '/assets/author-headshots/sagar.jpeg'
 tags:
   - Hooks
 is_featured: true
-featured_image: "/media/examples/generic.png"
+featured_image: "/assets/examples/generic.png"
 ---
 
 # Setting user agents in browser environments
