--- a/examples/openapi/path-fragments.mdx
+++ b/examples/openapi/path-fragments.mdx
@@ -1,15 +1,15 @@
 ---
 title: "Solving Equivalent Path Signatures"
 description: "Using path fragments to solve equivalent path signatures"
-image: "/media/examples/generic.png"
+image: "/assets/examples/generic.png"
 date: 2024-12-10
 authors:
   - name: Logan Gingerich
-  - image_url: '/media/author-headshots/logan.jpg'
+  - image_url: '/assets/author-headshots/logan.jpg'
 tags:
   - OpenAPI
 is_featured: true
-featured_image: "/media/examples/generic.png"
+featured_image: "/assets/examples/generic.png"
 ---
 
 # Using Path Fragments to Solve Equivalent Path Signatures
