--- a/examples/sdk-generation/overlays/internal-external-versions.mdx
+++ b/examples/sdk-generation/overlays/internal-external-versions.mdx
@@ -1,15 +1,15 @@
 ---
 title: "Creating Internal and External SDKs"
 description: "Create two different versions of an SDK, one for internal use and one for external use, using JSONPath expressions in OpenAPI Overlays."
-image: "/media/examples/generic.png"
+image: "/assets/examples/generic.png"
 date: 2024-09-16
 authors:
   - name: Logan Gingerich
-  - image_url: '/media/author-headshots/logan.jpg'
+  - image_url: '/assets/author-headshots/logan.jpg'
 tags:
   - SDK Generation
 is_featured: false
-featured_image: "/media/examples/generic.png"
+featured_image: "/assets/examples/generic.png"
 ---
 
 # Creating Internal and External SDKs
