--- a/examples/sdk-generation/overlays/json-path-expressions.mdx
+++ b/examples/sdk-generation/overlays/json-path-expressions.mdx
@@ -1,15 +1,15 @@
 ---
 title: "Common JSON Path expressions"
 description: " use JSONPath expressions in API documentation overlays to dynamically target and modify specific parts of an OpenAPI specification"
-image: "/media/examples/generic.png"
+image: "/assets/examples/generic.png"
 date: 2024-05-14
 authors:
   - name: Ash Godfrey
-  - image_url: '/media/author-headshots/ash.jpg'
+  - image_url: '/assets/author-headshots/ash.jpg'
 tags:
   - SDK Generation
 is_featured: true
-featured_image: "/media/examples/generic.png"
+featured_image: "/assets/examples/generic.png"
 ---
 
 # What are JSONPath Expressions?
