--- a/examples/sdk-generation/overlays/overlays.mdx
+++ b/examples/sdk-generation/overlays/overlays.mdx
@@ -1,15 +1,15 @@
 ---
 title: "Common Overlays for SDKs"
 description: "Overlays are a quick and easy way to implement changes to your OpenAPI / Swagger spec. We explain how they work and show you how to use overlays."
-image: "/media/examples/generic.png"
+image: "/assets/examples/generic.png"
 date: 2023-01-26
 authors:
   - name: Ash Godfrey
-  - image_url: '/media/author-headshots/ash.jpg'
+  - image_url: '/assets/author-headshots/ash.jpg'
 tags:
   - SDK Generation
 is_featured: true
-featured_image: "/media/examples/generic.png"
+featured_image: "/assets/examples/generic.png"
 ---
 
 # Example Overlays
