--- a/examples/sdk-generation/override-compile.mdx
+++ b/examples/sdk-generation/override-compile.mdx
@@ -1,15 +1,15 @@
 ---
 title: "Overriding Compile Commands for SDK Generation"
 description: "Use the `compileCommand` feature to streamline SDK generation and avoid manual maintenance of the `package.json` file during SDK generation."
-image: "/media/examples/generic.png"
+image: "/assets/examples/generic.png"
 date: 2025-01-03
 authors:
   - name: Logan Gingerich
-  - image_url: '/media/author-headshots/logan.jpg'
+  - image_url: '/assets/author-headshots/logan.jpg'
 tags:
   - SDK Generation
 is_featured: false
-featured_image: "/media/examples/generic.png"
+featured_image: "/assets/examples/generic.png"
 ---
 
 ## Overriding Compile Commands for SDK Generation
