--- a/examples/sdk-generation/pnpm-default.mdx
+++ b/examples/sdk-generation/pnpm-default.mdx
@@ -1,15 +1,15 @@
 ---
 title: "Switching default package manager to pnpm"
 description: "Configure pnpm as the default package manager in the SDK generation workflow."
-image: "/media/examples/generic.png"
+image: "/assets/examples/generic.png"
 date: 2024-12-05
 authors:
   - name: Logan Gingerich
-  - image_url: '/media/author-headshots/logan.jpg'
+  - image_url: '/assets/author-headshots/logan.jpg'
 tags:
   - SDK Generation
 is_featured: false
-featured_image: "/media/examples/generic.png"
+featured_image: "/assets/examples/generic.png"
 ---
 
 # Switching default package manager to `pnpm`
