--- a/examples/terraform/crud.mdx
+++ b/examples/terraform/crud.mdx
@@ -1,7 +1,7 @@
 ---
 title: "CRUD Example"
 description: "Learn how to annotate an operation as creating, reading, updating or deleting a remote entity."
-image: "/media/examples/generic.png"
+image: "/assets/examples/generic.png"
 date: 2023-01-26
 authors:
   - name: Ash Godfrey
@@ -9,7 +9,7 @@ authors:
 tags:
   - Terraform
 is_featured: true
-featured_image: "/media/examples/generic.png"
+featured_image: "/assets/examples/generic.png"
 ---
 
 import { Spotlight } from "@/mdx/components";
