--- a/examples/terraform/remove-nontf-endpoints.mdx
+++ b/examples/terraform/remove-nontf-endpoints.mdx
@@ -1,15 +1,15 @@
 ---
 title: "Removing non-Terraform endpoints from your OpenAPI document"
 description: "Use an overlay to remove endpoints not used in Terraform generation."
-image: "/media/examples/generic.png"
+image: "/assets/examples/generic.png"
 date: 2024-04-02
 authors:
   - name: Sagar Batchu
-  - image_url: '/media/author-headshots/sagar.jpeg'
+  - image_url: '/assets/author-headshots/sagar.jpeg'
 tags:
   - Terraform
 is_featured: true
-featured_image: "/media/examples/generic.png"
+featured_image: "/assets/examples/generic.png"
 ---
 
 # Overlay to remove non-Terraform endpoints
