--- a/examples/terraform/hoisting.mdx
+++ b/examples/terraform/hoisting.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Hoisting"
 description: "Hoisting enables flattening of an API request or API response body to make it more tightly align with the resource semantics."
-image: "/media/examples/generic.png"
+image: "/assets/examples/generic.png"
 date: 2023-01-26
 authors:
   - name: Ash Godfrey
@@ -9,7 +9,7 @@ authors:
 tags:
   - Terraform
 is_featured: true
-featured_image: "/media/examples/generic.png"
+featured_image: "/assets/examples/generic.png"
 ---
 
 import { Spotlight } from "@/mdx/components";
