--- a/examples/terraform/merged-entity.mdx
+++ b/examples/terraform/merged-entity.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Creating a Merged Terraform entity"
 description: "Specify how to orchestrate disparate API calls to create, update or delete a single merged entity that is resolved across multiple JSON Schemas in your OpenAPI spec."
-image: "/media/examples/generic.png"
+image: "/assets/examples/generic.png"
 date: 2023-01-26
 authors:
   - name: Ash Godfrey
@@ -9,7 +9,7 @@ authors:
 tags:
   - Terraform
 is_featured: true
-featured_image: "/media/examples/generic.png"
+featured_image: "/assets/examples/generic.png"
 ---
 
 import { Spotlight } from "@/mdx/components";
