chore: update tabs

--- a/docs/customize/structure/imports.mdx
+++ b/docs/customize/structure/imports.mdx
@@ -184,7 +184,7 @@ You will configure global imports slightly differently for different languages:
 <CodeWithTabs>
 
 {/* TODO: make sure title and tabs title works */}
-```yaml gen.yaml !!tabs TypeScript
+```yaml !!tabs TypeScript
 # For TypeScript to configure global imports, the `imports` section of your `gen.yaml` needs to include the following:
 
 typescript:
@@ -236,7 +236,7 @@ typescript:
 
 
 
-```yaml gen.yaml !!tabs Python
+```yaml !!tabs Python
 # For Python to configure global imports, the `imports` section of your `gen.yaml` needs to include the following:
 
 python:
@@ -291,7 +291,7 @@ python:
 # from speakeasybar.models import operations, components
 ```
 
-```yaml gen.yaml !!tabs Go
+```yaml !!tabs Go
 # For Go to configure global imports, the `imports` section of your `gen.yaml` needs to include the following:
 
 go:
@@ -332,7 +332,7 @@ go:
 # )
 ```
 
-```yaml gen.yaml !!tabs C#
+```yaml !!tabs C#
 # For C# to configure global imports, the `imports` section of your `gen.yaml` needs to include the following:
 
 csharp:
@@ -386,7 +386,7 @@ csharp:
 # using SpeakeasyBar;
 ```
 
-```yaml gen.yaml !!tabs Unity
+```yaml !!tabs Unity
 # For Unity to configure global imports, the `imports` section of your `gen.yaml` needs to include the following:
 
 unity:
