Add card grids to content

--- a/docs/languages/philosophy.mdx
+++ b/docs/languages/philosophy.mdx
@@ -4,8 +4,8 @@ title: Our design philosophy
 description: "Learn about Speakeasy's SDK design methodology, which prioritizes minimal dependencies, type safety, and easy debugging."
 ---
 
-import { supportedLanguages } from "@/lib/data/docs/languages";
-import { CardGrid } from "@/mdx/components";
+import { supportedLanguages, ossComparisonData } from "@/lib/data/docs/languages";
+import { CardGrid } from "@/components/card-grid";
 
 # Our design philosophy
 
@@ -20,6 +20,10 @@ SDKs are a critical interface for an API, which is why we put a lot of thought i
 
 Please see the table below for language-specific details.
 
-<CardGrid cards={supportedLanguages}  />
-{/* // TODO: refactor to make sense (cant preview right now so going in blind) */}
-{/* <IconGrid {...OSSComparisonData} /> */}
+<CardGrid cards={supportedLanguages} heading="Supported Languages" />
+
+## OSS Comparisons
+
+See how our SDKs compare to other open-source alternatives:
+
+<CardGrid cards={ossComparisonData} heading="SDK Comparisons" />
