--- a/openapi/frameworks.mdx
+++ b/openapi/frameworks.mdx
@@ -7,15 +7,27 @@ description: "How to generate an OpenAPI schema from your code"
 
 Here, you'll find a comprehensive collection of step-by-step guides for generating OpenAPI specs for popular server frameworks in various languages. Or read our guide below for advice on how to generate an OpenAPI schema from your existing code base.
 
-{/* <IconGrid {...TypescriptFrameworkGuidesData} /> */}
+import { CardGrid } from "@/components/card-grid";
+import { 
+  TypescriptFrameworkGuidesData, 
+  PythonFrameworkGuidesData, 
+  GoFrameworkGuidesData, 
+  JavaFrameworkGuidesData, 
+  PHPFrameworkGuidesData,
+  GRPCFrameworkGuidesData
+} from "@/lib/data/openapi/framework-guides";
 
-{/* <IconGrid {...PythonFrameworkGuidesData} /> */}
+<CardGrid cards={TypescriptFrameworkGuidesData} heading="TypeScript Frameworks" />
 
-{/* <IconGrid {...GoFrameworkGuidesData} /> */}
+<CardGrid cards={PythonFrameworkGuidesData} heading="Python Frameworks" />
 
-{/* <IconGrid {...JavaFrameworkGuidesData} /> */}
+<CardGrid cards={GoFrameworkGuidesData} heading="Go Frameworks" />
 
-{/* <IconGrid {...PHPFrameworkGuidesData} />  */}
+<CardGrid cards={JavaFrameworkGuidesData} heading="Java Frameworks" />
+
+<CardGrid cards={PHPFrameworkGuidesData} heading="PHP Frameworks" />
+
+<CardGrid cards={GRPCFrameworkGuidesData} heading="gRPC Tools" />
 
 
 # How to generate an OpenAPI schema from your code
