--- a/openapi/index.mdx
+++ b/openapi/index.mdx
@@ -4,6 +4,8 @@ description: Documentation of the OpenAPI Specification
 ---
 
 import { Callout } from "@/mdx/components";
+import { CardGrid } from "@/components/card-grid";
+import { allFrameworkGuidesData } from "@/lib/data/openapi/framework-all-guides";
 
 <Callout title="Contribute to this page">
   This documentation is Open source. If you have any feedback, suggestions, or
@@ -11,14 +13,17 @@ import { Callout } from "@/mdx/components";
   repo](https://github.com/speakeasy-api/openapi-reference-documentation).
 </Callout>
 
-{/* <Hero
-  title="OpenAPI Hub"
-  description="The all in one resource for understanding the OpenAPI Specification."
-/>
+# OpenAPI Hub
 
-<IconGrid {...FrameworkGuidesData} buttonText="See all" buttonUrl="/openapi/frameworks" />
+The all in one resource for understanding the OpenAPI Specification.
 
-<Separator className="opacity-10" /> */}
+## Server Framework Guides
+
+Generate OpenAPI specs from popular server frameworks:
+
+<CardGrid cards={allFrameworkGuidesData} heading="All Framework Guides" />
+
+---
 
 ### OpenAPI Overview
 
