--- a/guides/index.mdx
+++ b/guides/index.mdx
@@ -8,9 +8,14 @@ description: "Speakeasy guides"
 
 Here, you'll find a comprehensive collection of step-by-step guides, best practices, and tutorials to help you get the most out of Speakeasy. Whether you're just getting started or looking to delve deeper into advanced features, our guides are tailored to support you at every step of your journey.
 
-If you haven't used OpenAPI before, start with our [guide to creating an OpenAPI schema from your existing code](openapi/frameworks).
+import { CardGrid } from "@/components/card-grid";
+import { allFrameworkGuidesData } from "@/lib/data/openapi/framework-all-guides";
 
-{/* <IconGrid {...FrameworkGuidesData} /> */}
+## Framework Guides
+
+If you haven't used OpenAPI before, start with our guide to creating an OpenAPI schema from your existing code:
+
+<CardGrid cards={allFrameworkGuidesData} heading="OpenAPI with Popular Frameworks" />
 
 ## OpenAPI guides
 
